--- a/client/style.css
+++ b/client/style.css
@@ -12,13 +12,10 @@ body {
 }
 
 #app {
-  width: 90vw;
+  width: 94vw;
   height: 100vh;
   background: #343541;
-
-  border-radius: 10px;
-
-  margin: 1% 3% 0 3%;
+  margin: 0 3% 0 3%;
 
   display: flex;
   flex-direction: column;
@@ -147,19 +144,19 @@ form img {
   height: 30px;
 }
 
-footer{
+.footer{
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 5px 0 5px 0;
 }
 
-footer > p{
+.footer > p{
   color: #dcdcdc;
-  font-size: 1.1rem;
+  font-size: 0.95rem;
 }
 
-footer > p > a{
+.footer > p > a{
   color: aquamarine;
   text-decoration: none;
 }
