--- a/client/style.css
+++ b/client/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .ai {
-  background: #40414F;
+  background: #40414f;
 }
 
 .chat {
@@ -70,7 +70,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #5436DA;
+  background: #5436da;
 
   display: flex;
   justify-content: center;
@@ -96,7 +96,7 @@ body {
   max-width: 100%;
   overflow-x: scroll;
 
-  white-space: pre-wrap; 
+  white-space: pre-wrap;
 
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -112,11 +112,12 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #40414F;
+  background: #40414f;
 
   display: flex;
   flex-direction: row;
   gap: 10px;
+  pointer-events: none;
 }
 
 textarea {
@@ -144,19 +145,35 @@ form img {
   height: 30px;
 }
 
-.footer{
+.footer {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 5px 0 5px 0;
 }
 
-.footer > p{
+.footer > p {
   color: #dcdcdc;
   font-size: 0.95rem;
 }
 
-.footer > p > a{
+.footer > p > a {
   color: aquamarine;
   text-decoration: none;
+}
+
+.alert {
+  position: fixed;
+  z-index: 3;
+  max-width: 60vw;
+  width: 100%;
+  padding: 25px;
+  background: white;
+  color: rgb(68, 68, 68);
+  font-size: 1.6rem;
+  display: flex;
+  top: 30%;
+  left: 50%;
+  border-radius: 20px;
+  transform: translateX(-50%);
 }
